mobile screen layout problem on ECR page fixed

--- a/css/ecr.css
+++ b/css/ecr.css
@@ -60,13 +60,13 @@ hr {
   .intro-text{
     font-size: 1rem;
     letter-spacing: 0.02rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     letter-spacing: 0.1rem;
-    line-height: 3rem;
+    line-height: 2rem;
   }
 
   h3 {
@@ -79,6 +79,10 @@ hr {
 
   h2 {
     font-size:1.3rem;
+  }
+
+  h4 {
+    font-size:0.8rem;
   }
 
   h5 {
